Services implementations have been moved to the separate library

--- a/LocalizationInvestigation.WebApi.Dependencies/LocalizationInvestigation.WebApi.Dependencies.csproj
+++ b/LocalizationInvestigation.WebApi.Dependencies/LocalizationInvestigation.WebApi.Dependencies.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LocalizationInvestigation.Application.Services\LocalizationInvestigation.Application.Services.csproj" />
+    <ProjectReference Include="..\LocalizationInvestigation.Application.Services.Implementations\LocalizationInvestigation.Application.Services.Implementations.csproj" />
   </ItemGroup>
 
 </Project>
